--- a/package.json
+++ b/package.json
@@ -1,5 +1,15 @@
 {
-  "dependencies": {
-    "package.json": "^2.0.1"
+  "author": "Noemí Oteiza",
+  "description": "segunda entrega CODER",
+  "license": "MIT",
+  "name": "nombre-de-mi-package",
+  "scripts": {
+    "watch:css": "nodemon -e scss -x \"npm run build:css\"",
+    "build:css": "node-sass --output-style compressed scss/estilos.scss css/main.css"
+  },
+  "version": "1.0.0",
+  "devDependencies": {
+    "node-sass": "^7.0.1",
+    "nodemon": "^2.0.18"
   }
 }
